5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1791_3138.log
== TEST (2019-05-29 15:26:39) 
-- CODE:
from numpy import*
from math import*
v=array(eval(float(input(":"))))
soma=(v**7)
m=raiz(7((soma**7)/size(v)))
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:27:51) 
-- CODE:
from numpy import*
from math import*
v=array(eval(float(input(":"))))
soma=(v**7)
m=((soma**7)/size(v))**(1/7)
print(round(m,2))

-- EXECUTION TIME:
0.392595
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3138/main.py", line 3, in <module>
    v=array(eval(float(input())))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:27:52) 
-- CODE:
from numpy import*
from math import*
v=array(eval(float(input(":"))))
soma=(v**7)
m=((soma**7)/size(v))**(1/7)
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:28:40) 
-- CODE:
from numpy import*

v=array(eval(float(input(":"))))
soma=(v**7)
m=((soma**7)/size(v))**(1/7)
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:28:42) 
-- CODE:
from numpy import*

v=array(eval(float(input(":"))))
soma=(v**7)
m=((soma**7)/size(v))**(1/7)
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:28:42) 
-- CODE:
from numpy import*

v=array(eval(float(input(":"))))
soma=(v**7)
m=((soma**7)/size(v))**(1/7)
print(round(m,2))

-- EXECUTION TIME:
0.40806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3138/main.py", line 3, in <module>
    v=array(eval(float(input())))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:29:21) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m=((soma**7)/size(v))**(1/7)
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:05) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m=((soma**7)/size v)**(1/7)
print(round(m,2))

-- ERROR:
File "XXXX", line 5
    m=((soma**7)/size v)**(1/7)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:17) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m=((soma**7)/size (v)**(1/7)
print(round(m,2))

-- ERROR:
File "XXXX", line 6
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:26) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m=((soma**7)/size(v)**(1/7)
print(round(m,2))

-- ERROR:
File "XXXX", line 6
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:37) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m = ((soma**7)/size(v)**(1/7)
print(round(m,2))

-- ERROR:
File "XXXX", line 6
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:43) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m = ((soma**7)/size(v)**(1/7)
	  print(round(m,2))
-- ERROR:
File "XXXX", line 6
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:48) 
-- CODE:
from numpy import*

v=array(eval(input(":")))
soma=(v**7)
m = ((soma**7)/size(v)**(1/7)
print(round(m,2))
-- ERROR:
File "XXXX", line 6
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:31:52) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m = ((soma**7)/size(v)**(1/7)
print(round(m,2))
-- ERROR:
File "XXXX", line 5
    print(round(m,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:13) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m =((soma**7)/size(v))**(1/7)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:56) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m =((soma**7)/size(v))**(1/7)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:34:27) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m =((soma**7)/size(v))**(1/7)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:23) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m =round(((soma**7)/size(v))**(1/7),2)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:46) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m =round[((soma**7)/size(v))**(1/7),2]
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:33) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=(v**7)
m=((soma)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:38:44) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v**7)
m=((soma)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:39:16) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:39:43) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma+1)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:40:12) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma+1)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:25) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**7)/size(v))**(1/7)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:42:35) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**7)/size(v))**(1/7)
print(m)
-- EXECUTION TIME:
0.484262
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
25.975614394872167
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
17.883293966043883
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
12.316259772878709
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:44:31) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**6)/size(v))**(1/6)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:11) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**7)/size(v))**(1/6)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:35) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**6)/size(v))**(1/8)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:55) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**6)/size(v))**(1/9)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:17) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((soma**6)/size(v))**(1/9)
print(m)
-- EXECUTION TIME:
0.357172
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
8.50412492148307
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
6.646812121805426
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
5.198656609594023
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:47) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=(((soma+1)**6)/size(v))**(1/8)
print(round(m,2)
-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:04) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=((((soma+1)**6)/size(v))**(1/8)
print(round(m,2)
-- ERROR:
File "XXXX", line 5
    print(round(m,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:15) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=(((soma+1)**6)/size(v))**(1/8)
print(round(m,2)
-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:22) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=(((soma+1)**6)/size(v))**(1/8)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:47:43) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=(((soma+1)**6)/size(v))**(1/9)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:47:56) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=(((soma+1)**6)/size(v))**(1/9)
print(round(m,2))
-- EXECUTION TIME:
0.408963
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
8.67
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
6.84
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
5.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:52) 
-- CODE:
from numpy import*
v=array(eval(input(":")))
soma=sum(v)
m=(((soma+1)**6)/size(v))**(1/9)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
